sumo/tests/sumo/extended/emitter/errors/routedist/negative_prob/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: MSTriggeredSource emitter: Attribute 'probability' for route '1' is negative (must not).
Quitting (on error).
